[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
leptos = { version = "0.8.12", features = ["csr"] }
reqwest = "0.12.24"
rocket_dyn_templates = { version = "0.2.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { version = "0.1.0", path = "../shared" }

[features]
rocket_dyn_templates = ["dep:rocket_dyn_templates"]
